--- a/Labo7/Personal-Homepage/styles/style.css
+++ b/Labo7/Personal-Homepage/styles/style.css
@@ -47,3 +47,41 @@ li > table, tr{
 article:nth-child(1){
     margin-top: 1em;
 }
+
+table{
+
+
+    border-collapse: collapse;
+    border: 2px solid blue;
+    border-radius: 10px;
+    overflow: hidden;
+
+}
+
+td,th{
+    padding: 10px;
+    border: 1px solid black;
+}
+
+tfoot td{
+    padding: 0;
+    background-color: white;
+}
+
+tbody tr:nth-child(2n+0){
+    background-color: white;
+}
+
+
+tbody{
+    border: 2px solid black;
+}
+
+th{
+    text-align: left;
+}
+
+thead{
+    background-color: white;
+}
+
